--- a/package.json
+++ b/package.json
@@ -2,33 +2,25 @@
   "name": "qiwi-case-a-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "mocha",
-    "test-coverage": "npm test && istanbul cover node_modules/mocha/bin/_mocha -- -R spec",
-    "install-local": "npm install -g mocha & npm install -g node-inspector & npm install",
-    "start": "node server.js 1 prod 127.0.0.1 3000 9000",
-    "debug": "node-debug server.js 0 dev 127.0.0.1 3000 9000"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/Deformer/qiwi-case-a-server.git"
   },
-  "keywords": [
-    "none"
-  ],
   "author": "",
-  "license": "",
-  "devDependencies": {
-    "chai": "^4.0.2",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.4.2",
-    "sinon": "^2.3.5"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Deformer/qiwi-case-a-server/issues"
   },
+  "homepage": "https://github.com/Deformer/qiwi-case-a-server#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "cluster-service": "^2.0.0",
     "express": "^4.15.3",
-    "mongoose": "^4.10.8"
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.11.0"
   }
 }
