--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.11.0"
+    "mongoose": "^4.11.0",
+    "pg": "^6.4.0",
+    "sequelize": "^4.2.0"
   }
 }
