--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "install": "^0.10.1",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.0",
+    "npm": "^5.0.4",
     "pg": "^6.4.0",
-    "sequelize": "^4.2.0"
+    "sequelize": "^4.2.0",
+    "socket.io": "^2.0.3",
+    "socketio-jwt": "^4.5.0"
   }
 }
