--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Deformer/qiwi-case-a-server#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "eslint": "^4.1.1",
     "express": "^4.15.3",
     "install": "^0.10.1",
     "jsonwebtoken": "^7.4.1",
@@ -28,5 +29,12 @@
     "sequelize": "^4.2.0",
     "socket.io": "^2.0.3",
     "socketio-jwt": "^4.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.1.0",
+    "eslint-plugin-react": "^7.1.0"
   }
 }
